# narya

./: .ocamlformat  README.md  dune-project  flake.nix  narya.opam
.helix/: config.toml  languages.toml
lib/: basic.ml  datasets.ml  datasets.mli  dune  ndarray.ml  ndarray.mli  optim.ml  show.ml  tensor.ml  tensor.mli
test/: dune  test_narya.ml  test_ndarray.ml  test_tensor.ml
